# VideoKit

./: .gitignore  CMakeLists.txt  README.md
include/: dev.h  error.h  java.h  utils.h  vkdecoder.h  vklogger.h  vkmuxer.h
src/: main.c  vkdecoder.c  vklogger.c  vkmuxer.c
test/: test.c
